LU-279 Test failure on test suite sanity, subtest test_17k

rsync 3.0.x cares about exact xattr value size when passing 0 size
for determining the buffer size to hold the xattr value.

Change-Id: I05f8c062e64e22dd6982dc752d5869b457c7a2ef
Signed-off-by: Bobi Jam <bobijam@whamcloud.com>